--- a/index.html
+++ b/index.html
@@ -3,35 +3,14 @@
 <html>
 <head>
 	<title>泳池派对限时购买</title>
-	<style type="text/css">
-	    body{
-	    	background-color: #d2b48c;
-	    	margin-left: 20%;
-	    	margin-right: 20%;
-	    	border:2px solid black;
-	    	padding:10px 10px 10px 10px;
-	    	font-family: sans-serif; 
-	    }
-	    p{
-	    	color: maroon;
-	    }
-	    h1,h2{
-	    	font-family: sans-serif;
-	    	color:#282828;
-	    	border-bottom: 2px solid black ;
-	    }
-	    h1{
-	    	border-bottom: 5px double;
-	    	color:#121212;
-	    }
-    </style>
+     <link rel="stylesheet" type="text/css" href="css/lol.css" >
 </head>
 <body> 
 	 <!--一个用URL链接的图片-->
 	 <img src="http://img1.imgtn.bdimg.com/it/u=2075905635,791704408&fm=26&gp=0.jpg" width="499" height="274">
 	 <img src="http://img2.imgtn.bdimg.com/it/u=4079935154,4172108134&fm=11&gp=0.jpg" width="499" height="274">
 	 <br>
-	 <a href="http://lol.qq.com" title="指向一个并非自己写的网站">前往官网</a>
+	 <a href="http://lol.qq.com" title="指向一个并非自己写的网站" class="tolol">前往官网 goto: www.lol.qq.com</a>
 	 <!--title属性 鼠标放置-->
 	 <ul>
 	 <li><a href ="index.html#ycpd">跳转至泳池派对介绍</a> </li>
@@ -39,7 +18,7 @@
 	 <li><a href ="index.html#xsbj">跳转至血色暴君介绍</a> </li>
 	</ul>
 	<h1>LOL英雄攻略：荒漠屠夫——雷克顿</h1>
-	<p>
+	<p class="intro">
 		　<q>英雄联盟</q>泳池派对宝典活动又来啦!这个活动和之前的鸡里奥宝典类似，三条升级线路，每一级都有对应的奖励，当然也包括2018年三款全新的泳池派对皮肤，以下是活动指南，一起来了解一下吧。
 	</p>
 	
