--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
 <head>
 	<title>泳池派对限时购买</title>
      <link rel="stylesheet" type="text/css" href="css/lol.css" >
+     <link rel="icon" href="images/lol.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/lol.jpg" type="image/x-icon" />
 </head>
 <body> 
 	 <!--一个用URL链接的图片-->
-	 <img src="http://img1.imgtn.bdimg.com/it/u=2075905635,791704408&fm=26&gp=0.jpg" width="499" height="274">
-	 <img src="http://img2.imgtn.bdimg.com/it/u=4079935154,4172108134&fm=11&gp=0.jpg" width="499" height="274">
+	 <img src="http://img1.imgtn.bdimg.com/it/u=2075905635,791704408&fm=26&gp=0.jpg" width="499" height="274" class="im1">
+	 <img src="http://img2.imgtn.bdimg.com/it/u=4079935154,4172108134&fm=11&gp=0.jpg" width="499" height="274"  class="im2">
 	 <br>
 	 <a href="http://lol.qq.com" title="指向一个并非自己写的网站" class="tolol">前往官网 goto: www.lol.qq.com</a>
 	 <!--title属性 鼠标放置-->
+	 <p class="intro1">   
+	 	&nbsp; &nbsp;LOL2018泳池派对皮肤一览，早前就有消息称，今年依旧会有泳池派对皮肤上线。昨天拳头正式发布了新版阿卡丽的全新皮肤特效之后，拳头的北美官推公布了今年的三款泳池派对皮肤，下面就来一起看下吧。
+
+     LOL2018泳池派对皮肤分别是：船长普朗克、女警凯特琳以及暮光星灵佐伊！一起来看看吧~
+
+    虽然目前拳头还没有正式发布这些皮肤的细节，但是从目前的视频来看，这个夏日的泳池皮肤还是不错的，英雄一身清凉装扮上阵，一招一式都带有着特有的水光特效，似乎给这炎炎夏日降了不少温~
+
+	 </p>
+
 	 <ul>
 	 <li><a href ="index.html#ycpd">跳转至泳池派对介绍</a> </li>
 	 <li> <a href ="index.html#fwzs">跳转至符文战神介绍</a> </li>
 	 <li><a href ="index.html#xsbj">跳转至血色暴君介绍</a> </li>
 	</ul>
 	<h1>LOL英雄攻略：荒漠屠夫——雷克顿</h1>
-	<p class="intro">
+	<p class="intro2">
 		　<q>英雄联盟</q>泳池派对宝典活动又来啦!这个活动和之前的鸡里奥宝典类似，三条升级线路，每一级都有对应的奖励，当然也包括2018年三款全新的泳池派对皮肤，以下是活动指南，一起来了解一下吧。
 	</p>
 	
@@ -27,10 +38,11 @@
        	           万水千山总是情，<br>
        	           买个皮肤行不行？<br>
        </blockquote>
-	
-	  
+	 <h2 class="old">原价十折</h2>
+	  <h2 class='test'>italic test</h2>
 	<h2 id="ycpd">泳池派对 雷克顿</h2>
 	<img src="images/ycpd.jpg" width="800" height="600" alt="zz">
+	<p>原价：138QB</p>
 	<p>5折限时销售： 69QB</p>  
 	<a href="about/ycpd.html">详情</a>
 	<br><br><br><br><br><br><br><br><br><br>
