--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <link rel="shortcut icon" href="images/lol.jpg" type="image/x-icon" />
 </head>
 <body> 
+
 	 <!--一个用URL链接的图片-->
 	 <img src="http://img1.imgtn.bdimg.com/it/u=2075905635,791704408&fm=26&gp=0.jpg" width="499" height="274" class="im1">
 	 <img src="http://img2.imgtn.bdimg.com/it/u=4079935154,4172108134&fm=11&gp=0.jpg" width="499" height="274"  class="im2">
 	 <br>
 	 <a href="http://lol.qq.com" title="指向一个并非自己写的网站" class="tolol">前往官网 goto: www.lol.qq.com</a>
 	 <!--title属性 鼠标放置-->
-	 <p class="intro1">   
+	 <p id="intro1">   
 	 	&nbsp; &nbsp;LOL2018泳池派对皮肤一览，早前就有消息称，今年依旧会有泳池派对皮肤上线。昨天拳头正式发布了新版阿卡丽的全新皮肤特效之后，拳头的北美官推公布了今年的三款泳池派对皮肤，下面就来一起看下吧。
 
      LOL2018泳池派对皮肤分别是：船长普朗克、女警凯特琳以及暮光星灵佐伊！一起来看看吧~
 
     虽然目前拳头还没有正式发布这些皮肤的细节，但是从目前的视频来看，这个夏日的泳池皮肤还是不错的，英雄一身清凉装扮上阵，一招一式都带有着特有的水光特效，似乎给这炎炎夏日降了不少温~
 
-	 </p>
-
-	 <ul>
+	 </p >
+<div id="list">
+	 <ul >
 	 <li><a href ="index.html#ycpd">跳转至泳池派对介绍</a> </li>
 	 <li> <a href ="index.html#fwzs">跳转至符文战神介绍</a> </li>
 	 <li><a href ="index.html#xsbj">跳转至血色暴君介绍</a> </li>
 	</ul>
+</div>
+
 	<h1>LOL英雄攻略：荒漠屠夫——雷克顿</h1>
 	<p class="intro2">
 		　<q>英雄联盟</q>泳池派对宝典活动又来啦!这个活动和之前的鸡里奥宝典类似，三条升级线路，每一级都有对应的奖励，当然也包括2018年三款全新的泳池派对皮肤，以下是活动指南，一起来了解一下吧。
@@ -38,11 +41,11 @@
        	           万水千山总是情，<br>
        	           买个皮肤行不行？<br>
        </blockquote>
-	 <h2 class="old">原价十折</h2>
-	  <h2 class='test'>italic test</h2>
+<div id="show" >
+    <h2 class='test'>italic test</h2>
 	<h2 id="ycpd">泳池派对 雷克顿</h2>
 	<img src="images/ycpd.jpg" width="800" height="600" alt="zz">
-	<p>原价：138QB</p>
+	<div>原价：<span id="price1">138QB</span></div>
 	<p>5折限时销售： 69QB</p>  
 	<a href="about/ycpd.html">详情</a>
 	<br><br><br><br><br><br><br><br><br><br>
@@ -54,5 +57,24 @@
 	<img src="images/xsbj.jpg" width="800" height="600" alt="抱歉！无法正常显示">  <!--alt 图片无法加载的代替文本-->
 	<p>3折限时销售： 20QB</p>  <a href="about/xsbj.html">详情</a>
 	<br><br><br><br><br><br><br><br><br><br>
+  </div>
+	  <div id="article">
+  	<h2>冰心文学选集</h2>
+    <p >
+    	1、在我看来,冬天是最不浪漫的季节,特别是南方的冬天,它看不到北方的银装素裹,冰天雪地;也看不到西部的万里荒漠,悄无人声.南方的冬天永远都只是一片萧条之色.天很冷很冷,却不带一丝湿润,浸入骨髓的冰凉仿佛要把身体的所有温暖都抽去,只留下如干絮般散漫的冷一团一团的塞在胸肺间.
+
+在这样的季节里,人的思维都会被冻住,什末情感,浪漫会在刹那间被抛之九霄云外.在这样的境况下,难以提起一丝好兴致,哪怕偶尔有所愿望,也会很快被扔到记忆的角落里.
+
+2、站在户外,轻轻的嘘一口气,一团白雾裹着一份温暖袅袅升空,在半空中伸展,氤氲,半晌又汇入了干冷的空气.刚刚燃起的一点希望有破灭了,消失得轻悄而又平静,仿佛从来就不曾有过,又恍惚有过这末一份特别的湿润.
+
+小澍长成大树,到了冬天便成了老树,老树枝桠交错,只有几片稀稀落落的叶子点缀着生命的痕迹.树皮微现焦黄,仿佛在火上烤了许久,煎熬的失了神采,半卷曲着好像随时都会坠地.
+
+3、夏日里花叶田田的荷塘,此时都只剩下了根根枯管,片片残叶.早已没了衔露含珠的风韵.寒风轻摇,枯和倓叶,仿佛悄悄的诉说着昔日美艳,又仿佛轻轻暗泣着如今没落.倘若再来一场冷雨,更催花落,倒符了李义山留得残荷听雨声的心境.
+
+4、南方的山向来不如北方的高大巍峨,到了冬日更失了往日的润朗,之留下了略带灰蒙的身影悄然耸立于天地间.默守着一份寂静.倘若在北方,来一场大雪,将群山覆盖上一层苍茫的白色,那有是一副磅礴的好图景,巍芒间孕育着新的希望.
+
+只可惜南方无雪,如同土丘半散漫开的小山零零落落的点缀在辽阔的江汉平原上,山间便只剩下松柏苍翠的影子,但之绿色都如同带着一层霜,淡绿中隐隐的泛出青灰.远望去仿佛被飞扬的尘土覆住了.
+    </p>
+  </div>
 </body>
 </html>
